foundations/flex/06-flex-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
  height: 100vh;
  margin: 0;
  overflow: hidden;
  font-family: Roboto, sans-serif;
}

img {
  width: 600px;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #eee;
}

input {
  border: 1px solid #ddd;
  border-radius: 16px;
  padding: 8px 24px;
  width: 400px;
}

ul {
  list-style: none;
}

li a{
  text-decoration: none;
}

.header, 
.right-links, 
.left-links,
.footer {
  display: flex;
  gap: 10px;
}

.header {
  width: 500px;
}

.right-links{
  justify-content: space-around;
}

